--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h2>Index</h2>
-<a href="/member/save">회원가입</a>
+<a href="/member/save">회원가입</a> <br>
+<a href="/members">회원목록</a> <br>
 </body>
 </html>
