로그인(조회시 비밀번호 포함)

--- a/src/main/resources/templates/memberPages/memberMain.html
+++ b/src/main/resources/templates/memberPages/memberMain.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<p th:text="|${session.memberEmail}님 환영합니다.|"></p>
-<a th:href="@{|/member/${session.id}|}">조회</a>
+<p th:text="|${session.loginEmail}님 환영합니다.|"></p>
+<a th:href="@{|/member/${session.loginId}|}">조회</a>
 <a href="/member/logout">로그아웃</a>
 </body>
 </html>
