--- a/src/main/resources/templates/memberPages/memberList.html
+++ b/src/main/resources/templates/memberPages/memberList.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
-    <title>회원목록</title>
+    <th:block th:replace="~{component/config :: config}"></th:block>
 </head>
 <body>
-<table>
-    <tr>
-        <th>Id</th>
-        <th>이메일</th>
-        <th>이름</th>
-        <th>생년월일</th>
-        <th>전화번호</th>
-    </tr>
-    <tr th:each="member: ${memberList}">
-        <td th:text="${member.id}"></td>
-        <td>
-            <a th:href="@{|/member/${member.id}|}" th:text="${member.memberEmail}"></a>
-        </td>
-        <td th:text="${member.memberName}"></td>
-        <td th:text="${member.memberBirth}"></td>
-        <td th:text="${member.memberMobile}"></td>
-    </tr>
-</table>
+<div th:replace="~{component/header :: header}"></div>
+<div th:replace="~{component/nav :: nav}"></div>
+<div class="container">
+    <table>
+        <tr>
+            <th>Id</th>
+            <th>이메일</th>
+            <th>이름</th>
+            <th>생년월일</th>
+            <th>전화번호</th>
+        </tr>
+        <tr th:each="member: ${memberList}">
+            <td th:text="${member.id}"></td>
+            <td>
+                <a th:href="@{|/member/${member.id}|}" th:text="${member.memberEmail}"></a>
+            </td>
+            <td th:text="${member.memberName}"></td>
+            <td th:text="${member.memberBirth}"></td>
+            <td th:text="${member.memberMobile}"></td>
+        </tr>
+    </table>
+</div>
+<div th:replace="~{component/footer :: footer}"></div>
 </body>
 </html>
