--- a/src/main/resources/templates/memberPages/memberMain.html
+++ b/src/main/resources/templates/memberPages/memberMain.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
-    <title>Title</title>
+    <th:block th:replace="~{component/config :: config}"></th:block>
 </head>
 <body>
-<p th:text="|${session.loginEmail}님 환영합니다.|"></p>
-<a th:href="@{|/member/${session.loginId}|}">조회</a>
-<a href="/member/logout">로그아웃</a>
+<div th:replace="~{component/header :: header}"></div>
+<div th:replace="~{component/nav :: nav}"></div>
+<div class="container">
+    <p th:text="|${session.loginEmail}님 환영합니다.|"></p>
+    <a th:href="@{|/member/${session.loginId}|}">조회</a>
+    <a href="/member/logout">로그아웃</a>
+</div>
+<div th:replace="~{component/footer :: footer}"></div>
 </body>
 </html>
