--- a/src/main/resources/templates/memberPages/memberList.html
+++ b/src/main/resources/templates/memberPages/memberList.html
@@ -7,7 +7,7 @@
 <div th:replace="~{component/header :: header}"></div>
 <div th:replace="~{component/nav :: nav}"></div>
 <div class="container">
-    <table>
+    <table class="table">
         <tr>
             <th>Id</th>
             <th>이메일</th>
