--- a/src/main/resources/templates/component/nav.html
+++ b/src/main/resources/templates/component/nav.html
@@ -14,7 +14,7 @@
             <a href="/member/save">회원가입</a>
         </li>
         <li class="menu-item">
-            <a href="/members">회원목록</a>
+            <a href="/member">회원목록</a>
         </li>
         <li class="menu-item" id="login-area">
 
