--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,6 @@
 <h2>Index</h2>
 <a href="/member/save">회원가입</a> <br>
 <a href="/member/login">로그인</a> <br>
-<a href="/members">회원목록</a> <br>
+<a href="/member">회원목록</a> <br>
 </body>
 </html>
