--- a/src/main/resources/templates/memberPages/memberList.html
+++ b/src/main/resources/templates/memberPages/memberList.html
@@ -14,6 +14,8 @@
             <th>이름</th>
             <th>생년월일</th>
             <th>전화번호</th>
+            <th>조회</th>
+            <th>삭제</th>
         </tr>
         <tr th:each="member: ${memberList}">
             <td th:text="${member.id}"></td>
@@ -23,9 +25,29 @@
             <td th:text="${member.memberName}"></td>
             <td th:text="${member.memberBirth}"></td>
             <td th:text="${member.memberMobile}"></td>
+            <td>
+                <button class="btn btn-secondary" th:onclick="detail_fn([[${member.id}]])">조회</button>
+            </td>
+            <td>
+                <button class="btn btn-danger" th:onclick="delete_fn([[${member.id}]])">삭제</button>
+            </td>
         </tr>
     </table>
 </div>
 <div th:replace="~{component/footer :: footer}"></div>
 </body>
+<script>
+    const detail_fn = (id) => {
+        location.href = `/member/${id}`;
+    }
+    const delete_fn = (id) => {
+        location.href = `/member/delete/${id}`;
+        // axios.delete("/member/" + id)
+        //     .then(function (response) {
+        //         location.href = "/member";
+        //     }).catch(function (error) {
+        //     console.log(error)
+        // })
+    }
+</script>
 </html>
