--- a/src/main/resources/templates/memberPages/memberDetail.html
+++ b/src/main/resources/templates/memberPages/memberDetail.html
@@ -32,7 +32,7 @@
 </div>
 <div th:replace="~{component/footer :: footer}"></div>
 </body>
-<script>
+<script th:inline="javascript">
     const update_fn = (id) => {
         location.href = `/member/update/${id}`
     }
