--- a/src/main/resources/templates/memberPages/memberUpdate.html
+++ b/src/main/resources/templates/memberPages/memberUpdate.html
@@ -34,7 +34,7 @@
 </div>
 <div th:replace="~{component/footer :: footer}"></div>
 </body>
-<script>
+<script th:inline="javascript">
     const cancel_fn = (id) => {
         location.href = `/member/${id}`;
     }
