--- a/src/main/resources/templates/memberPages/memberUpdate.html
+++ b/src/main/resources/templates/memberPages/memberUpdate.html
@@ -55,7 +55,7 @@
             axios({
                 method:"put",
                 url:`/member/${id}`,
-                date:{
+                data:{
                     id:id,
                     memberEmail: email,
                     memberPassword: pass,
@@ -67,7 +67,8 @@
                 alert("정보수정이 완료되었습니다. 로그인화면으로 이동합니다.");
                 location.href = "/member/login";
             }).catch(err => {
-                alert("정보수정에 실패하였습니다.")
+                console.log(err);
+                alert("정보수정에 실패하였습니다.");
             });
         } else {
             alert("비밀번호가 틀립니다.");
